Move files inside rails public...

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Agile task board</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/main.css">
   <script>
   var require, define;
   (function () {
@@ -32,12 +32,12 @@
 
   <div class="tasks" id="tasks"></div>
   
-  <script src="vendor/mustache.js"></script>
-  <script src="lib/tmpl.js"></script>
-  <script src="lib/column_view.js"></script>
-  <script src="lib/request.js"></script>
-  <script src="lib/fetch.js"></script>
-  <script src="lib/main.js"></script>
+  <script src="/vendor/mustache.js"></script>
+  <script src="/lib/tmpl.js"></script>
+  <script src="/lib/column_view.js"></script>
+  <script src="/lib/request.js"></script>
+  <script src="/lib/fetch.js"></script>
+  <script src="/lib/main.js"></script>
   <script>
   require('main')();
   </script>
