--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <div class="tasks" id="tasks"></div>
   
   <script src="/vendor/mustache.js"></script>
+  <script src="/lib/config.js"></script>
   <script src="/lib/tmpl.js"></script>
   <script src="/lib/column_view.js"></script>
   <script src="/lib/request.js"></script>
