--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Agile task board</title>
   <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/typography.css">
   <link rel="stylesheet" href="/css/main.css">
   <script>
   var require, define;
