Move column rendering into a generic renderer

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <script src="/vendor/mustache.js"></script>
   <script src="/lib/config.js"></script>
   <script src="/lib/tmpl.js"></script>
-  <script src="/lib/column_view.js"></script>
+  <script src="/lib/render.js"></script>
   <script src="/lib/request.js"></script>
   <script src="/lib/fetch.js"></script>
   <script src="/lib/main.js"></script>
