--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,28 @@
     </section>
   </script>
 
+  <script type="text/html" data-name="settingsForm">
+    <label>
+      Pivotal API token
+      <input type="text" name="token" value="{{token}}">
+    </label>
+    <button type="submit">Save</button>
+  </script>
+
+  <form id="settings-form"></form>
+
   <div class="tasks" id="tasks"></div>
   
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="/vendor/lodash.js"></script>
+  <script src="/vendor/backbone.js"></script>
   <script src="/vendor/mustache.js"></script>
+  <script src="/lib/app.js"></script>
   <script src="/lib/config.js"></script>
   <script src="/lib/tmpl.js"></script>
   <script src="/lib/render.js"></script>
+  <script src="/lib/settings.js"></script>
+  <script src="/lib/views/settings_form_view.js"></script>
   <script src="/lib/request.js"></script>
   <script src="/lib/fetch.js"></script>
   <script src="/lib/main.js"></script>
