Enable navigation between projects

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <script type="text/html" data-name="projectList">
     <ul>
       {{#.}}
-        <li>{{name}}</li>
+        <li><a href="#/{{id}}">{{name}}</a></li>
       {{/.}}
     </ul>
   </script>
