--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,16 @@
     </ul>
   </script>
 
-  <form id="settings-form"></form>
+  <div id="container" class="container">
+    <div id="settings" class="settings">
+      <form id="settings-form" class="settings-form"></form>
 
-  <div id="project-list"></div>
+      <div id="project-list" class="project-list"></div>
+    </div>
 
-  <div class="tasks" id="tasks"></div>
-  
+    <div class="tasks" id="tasks"></div>
+  </div>
+  <!-- TODO minify all this -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="/vendor/lodash.js"></script>
   <script src="/vendor/backbone.js"></script>
@@ -69,6 +73,7 @@
   <script src="/lib/request.js"></script>
   <script src="/lib/fetch.js"></script>
   <script src="/lib/collections/project_collection.js"></script>
+  <script src="/lib/views/container_view.js"></script>
   <script src="/lib/views/project_list_view.js"></script>
   <script src="/lib/views/settings_form_view.js"></script>
   <script src="/lib/main.js"></script>
