Add a story type class name to each story

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <h1>{{state}}</h1>
       <ul>
         {{#issues}}
-          <li>
+          <li class="{{story_type}}">
             {{name}}
             <span class="estimate">{{estimate}}</span>
             {{#owned_by}}<small>({{owned_by}})</small>{{/owned_by}}
