Move XML mapper into base collection

--- a/public/index.html
+++ b/public/index.html
@@ -65,13 +65,14 @@
   <script src="/vendor/lodash.js"></script>
   <script src="/vendor/backbone.js"></script>
   <script src="/vendor/mustache.js"></script>
+  <script src="/lib/request.js"></script>
   <script src="/lib/app.js"></script>
   <script src="/lib/config.js"></script>
   <script src="/lib/tmpl.js"></script>
   <script src="/lib/render.js"></script>
   <script src="/lib/settings.js"></script>
-  <script src="/lib/request.js"></script>
   <script src="/lib/fetch.js"></script>
+  <script src="/lib/collections/story_collection.js"></script>
   <script src="/lib/collections/project_collection.js"></script>
   <script src="/lib/views/container_view.js"></script>
   <script src="/lib/views/project_list_view.js"></script>
