--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <script type="text/html" data-name="column">
     <header>
       <h1>{{state}}</h1>
-      {{issue_count}} stories, {{total_points}} points
+      <span class="summary">{{issue_count}} stories, {{total_points}} points</span>
     </header>
     <ul>
       {{#issues}}
