--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
   <script src="/vendor/lodash.js"></script>
   <script src="/vendor/backbone.js"></script>
   <script src="/vendor/mustache.js"></script>
+  <script src="/lib/utils.js"></script>
   <script src="/lib/request.js"></script>
   <script src="/lib/app.js"></script>
   <script src="/lib/config.js"></script>
@@ -73,6 +74,7 @@
   <script src="/lib/settings.js"></script>
   <script src="/lib/collections/story_collection.js"></script>
   <script src="/lib/collections/project_collection.js"></script>
+  <script src="/lib/burn_chart.js"></script>
   <script src="/lib/views/container_view.js"></script>
   <script src="/lib/views/project_list_view.js"></script>
   <script src="/lib/views/settings_form_view.js"></script>
