Style the graph a bit more, so that it fits over the board more nicely.

--- a/public/index.html
+++ b/public/index.html
@@ -90,8 +90,10 @@
       <div id="project-list" class="project-list"></div>
     </div>
 
-    <div class="tasks" id="tasks"></div>
-    <div class="burn-chart" id="burn-chart"></div>
+    <div class="board">
+      <div class="tasks" id="tasks"></div>
+      <div class="burn-chart" id="burn-chart"></div>
+    </div>
   </div>
   <footer id="footer" class="footer"></footer>
   <!-- TODO minify all this -->
