Sex up the form a bit

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
   <script type="text/html" data-name="accountSettings">
     <label>
-      Pivotal API token
+      <span>Pivotal API token</span>
       <input type="text" name="token" value="{{token}}">
     </label>
   </script>
