--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <ul>
       {{#issues}}
         <li class="{{story_type}}">
-          {{name}}
+          <span class="name">{{name}}</span>
           <span class="estimate">{{estimate}}</span>
           {{#owned_by}}<small>({{owned_by}})</small>{{/owned_by}}
           <span class="labels">
