Add logo to footer

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
         {{/value}}
       {{/legend}}
     </div>
+    <a class="logo" href="http://www.unboxedconsulting.com">Unboxed Consulting</a>
   </script>
 
   <div id="container" class="container">
