--- a/public/index.html
+++ b/public/index.html
@@ -25,20 +25,20 @@
       <h1>{{state}}</h1>
       <span class="summary">{{issue_count}} stories, {{total_points}} points</span>
     </header>
-    <ul>
-      {{#issues}}
-        <li class="{{story_type}}">
-          <span class="name">{{name}}</span>
-          <span class="estimate">{{estimate}}</span>
-          {{#owned_by}}<small>({{owned_by}})</small>{{/owned_by}}
-          <span class="labels">
-          {{#matched_labels}}
-            <span class="label label-{{slot}}">{{value}}</span>
-          {{/matched_labels}}
-          </span>
-        </li>
-      {{/issues}}
-    </ul>
+    <ul></ul>
+  </script>
+
+  <script type="text/html" data-name="issue">
+    <li class="{{story_type}}">
+      <span class="name">{{name}}</span>
+      <span class="estimate">{{estimate}}</span>
+      {{#owned_by}}<small>({{owned_by}})</small>{{/owned_by}}
+      <span class="labels">
+      {{#matched_labels}}
+        <span class="label label-{{slot}}">{{value}}</span>
+      {{/matched_labels}}
+      </span>
+    </li>
   </script>
 
   <script type="text/html" data-name="accountSettings">
@@ -119,6 +119,7 @@
   <script src="/lib/views/project_list_view.js"></script>
   <script src="/lib/views/account_settings_view.js"></script>
   <script src="/lib/views/settings_form_view.js"></script>
+  <script src="/lib/views/issue_view.js"></script>
   <script src="/lib/views/column_view.js"></script>
   <script src="/lib/views/footer_view.js"></script>
   <script src="/lib/views/burn_chart_view.js"></script>
