Add an application level event broker

--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,7 @@
   <script src="/lib/utils.js"></script>
   <script src="/lib/request.js"></script>
   <script src="/lib/app.js"></script>
+  <script src="/lib/broker.js"></script>
   <script src="/lib/config.js"></script>
   <script src="/lib/tmpl.js"></script>
   <script src="/lib/settings.js"></script>
