Move hash mashing into a module

--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,7 @@
   <script src="/vendor/mustache.js"></script>
   <script src="/lib/utils.js"></script>
   <script src="/lib/request.js"></script>
+  <script src="/lib/current_project.js"></script>
   <script src="/lib/app.js"></script>
   <script src="/lib/broker.js"></script>
   <script src="/lib/config.js"></script>
