--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <body>
   <script type="text/html" data-name="column">
     <header>
-      <h1>{{state}}</h1>
+      <h1>{{state_name}}</h1>
       <span class="summary">{{issue_count}} stories, {{total_points}} points</span>
     </header>
     <ul></ul>
